# blog-post

./: .env  Procfile  db.sqlite3  pyproject.toml  requirements.txt
blog/: models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog_post/: settings.py  urls.py
