[project]
name = "blog-post"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "argcomplete==3.1.4",
    "beautifulsoup4==4.12.3",
    "blinker==1.7.0",
    "certifi==2023.11.17",
    "chardet==5.2.0",
    "click==8.1.6",
    "colorama==0.4.6",
    "configobj==5.0.8",
    "cryptography==41.0.7",
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-yasg>=1.21.10",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "whitenoise>=6.9.0",
]
